--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -12,4 +12,13 @@ html(lang="en")
         h1 NOOM 
     main    
         h2 Welcome to Noom
+        form#nick
+            input(type="text", placeholder="write a nickname",required)
+            button save
+
+        ul
+        form#message
+            input(type="text", placeholder="write the msg",required)
+            button send
+   
     script(src="/public/js/app.js")
