--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -12,10 +12,21 @@ html(lang="en")
         h1 NOOM 
 
     main
+        h3
+        form#name
+                input(type="text", placeholder="nickname",required)
+                button Save
+
         div#welcome 
             form 
                 input(type="text", placeholder="room name",required)
                 button Enter room 
-
+        div#room 
+            
+            ul 
+            
+            form#msg
+                input(type="text", placeholder="message",required)
+                button Send
     script(src="/socket.io/socket.io.js")  
     script(src="/public/js/app.js")
