--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,6 +10,7 @@ html(lang="en")
 
     header 
         h1 NOOM 
+        h2
 
     main
         h3
@@ -21,6 +22,8 @@ html(lang="en")
             form 
                 input(type="text", placeholder="room name",required)
                 button Enter room 
+            h4 Open rooms...
+            ul
         div#room 
             
             ul 
