--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -21,7 +21,8 @@ html(lang="en")
             video#myFace(autoplay,playsinline, muted, width="400", height="400")
             //- playsinline은 전체화면 방지
             button#mute Mute 
-            button#camera Turn Carmera Off
+            button#camera Turn Off
             select#cameras
+            video#peerFace(autoplay,playsinline,width="400",height="400")
     script(src="/socket.io/socket.io.js")  
     script(src="/public/js/app.js")
